v1.1.6 (2018-01-20)
- addon now works in kode python 2 and should also work in python 3 (!!) once all dependencies work in python 3.
Kudo's to the python future package for making this possible. Kudo's to RomanVM for the help.
- removed caching

v1.1.5 (2017-07-16)
- rolling back changed foldername for strings because that doesn't work for gotham

v1.1.4 (2017-07-12)
- reformatted changelog
- removed strings.xml
- added listitem.setInfo video for Kodi 18 and up
- added sorting
- added context item episode info
- removed 'latest videos' category as that already exists as 'all' category
- refactored listing the videos
- changed foldername for strings
- using requests

v1.1.3 (2017-03-03)
- using po-files
- fixed url in addon.xml as per request

v1.1.2 (2016-02-20)
- added some utf-8 stuff
- updated to latest requirements for a Kodi-addon
- added fanart
- added fanart-blurred

v1.1.1 (2014-04-20)
- fix to get the addon working again after changes in the website.
- I couldn't get in contact with divingmule, therefore i (Skipmode A1) made a new of the addon based on divingmule's sourcecode.
- Thanks to gtoons for the feedburner tip.

v1.1.0
- update for frodo/gotham

v1.0.8
- fix for changes in Frodo

v1.0.7
- updated podcasts list

v1.0.6
- fix bug in scraper

v1.0.5
- updated show list, thanks pkscuot

v1.0.2
- fix for feed changes
- new playback setting

v1.0.1
- added the crave podcast

v1.0.0
- new for eden

v0.0.4
- added addon settings for video quality instead of categories

v0.0.3
- updated icon.png

v0.0.2
- added video descriptions
- added categories for SD and HD

v0.0.1
- initial version