@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
 <!--<setting id="playback_type" type="enum" lvalues="30001|30002|30003" label="30004" default="1"/>-->
-    <setting id="view_mode" type="enum" label="30005" lvalues="30006|30007|30008|30009|30010|30011|30012" default="0"/>
+    <setting id="view_mode"              type="enum" label="30005" lvalues="30006|30007|30008|30009|30010|30011|30012" default="0"/>
+    <setting id="onlyshowallcategory" type="bool" label="30610"                                                     default="false"/>
 </settings>
