@@ -2,6 +2,7 @@ v1.1.6 (2018-01-20)
 - addon now works in kode python 2 and should also work in python 3 (!!) once all dependencies work in python 3.
 Kudo's to the python future package for making this possible. Kudo's to RomanVM for the help.
 - removed caching
+- adding a setting to only view all video category
 
 v1.1.5 (2017-07-16)
 - rolling back changed foldername for strings because that doesn't work for gotham
